add lips build to @lipsjs npm org

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@fabrice8/lips",
-  "version": "0.0.2",
-  "description": "Fast, lightweight and better declarative UI Framework",
+  "name": "@lipsjs/lips",
+  "version": "0.0.1",
+  "description": "Fast, Lightweight Reactive UI Framework",
   "main": "./dist/lips.min.js",
   "files": [
     "dist/",
